In the TO_REPLACE field in the EscapeCharacter file, Use List.of instead of Arrays.asList
The Arrays.asList method can change elements. SEARCH_OUTPUT_FIELDS is an immutable field, so it has been improved to util List.of.